# manoi

./: CRobot.cpp  CRobot.h  FAQ  Form1.h  INFO  MAINTAINERS  README  TODO  configure.ac  stdafx.cpp
documentation/cscope/: MANOI_Files.CScope
src/: AssemblyInfo.cpp  Makefile.am  ManoiControl.vcproj  README  Rakefile  configure.ac
src/templates/: template.c  template.h
src/tests/: README
src/windows/: AssemblyInfo.cpp  CRobot.h  FIXME  Form1.h  ManoiControl.cpp
